syntax = "proto3";
package rpc_monitor;

//cpu负载，分别是1分钟内平均负载，3分钟内平均负载，15分钟内平均负载
message CpuLoad {
    float load_avg_1 = 1;
    float load_avg_3 = 2;
    float load_avg_15 = 3;
  }